<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:weightSum="1">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Login to proceed :"
            android:id="@+id/textView"
            android:textSize="30sp"
            android:layout_gravity="center"/>
    <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minHeight="50sp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/username"
                android:ems="10"
                android:id="@+id/username_textfield"
                android:textColorHint="@android:color/darker_gray"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:ems="10"
                android:id="@+id/password_textfield"
                android:textColorHint="@android:color/darker_gray"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_user_pass"
                android:id="@+id/loginCheckBox"
                android:layout_gravity="center_horizontal"/>
        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/Login_button"
                android:id="@+id/login_button"
                android:onClick="loginUser"
                android:clickable="true"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"/>

    </LinearLayout>
    <Space android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_gravity="center_horizontal"
           android:minHeight="50sp"
           android:id="@+id/space"
           android:layout_weight="0.84"/>
    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Register"
            android:id="@+id/register_button"
            android:layout_gravity="center_horizontal"/>
</LinearLayout>

