<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete PCs from Database"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="29sp"
            android:textStyle="italic"
            android:textColor="@color/chocolate"
            android:textIsSelectable="true"
            android:layout_gravity="center"
            android:paddingBottom="25dp"/>
    <Space
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_yes_button"
                android:id="@+id/register_button"
                android:onClick="registerComputer"
                android:layout_weight="1"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_no_button"
                android:id="@+id/unregister_button"
                android:onClick="unregisterComputer"
                android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/genericID_textfield"
                android:inputType="text"
                android:hint="@string/genericID"
                android:textColorHint="@android:color/darker_gray"/>
    </LinearLayout>

    <Space android:layout_width="match_parent"
           android:layout_height="74dp"
           android:layout_gravity="center_horizontal"
           android:id="@+id/spaceDel"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Show all Computers"
            android:id="@+id/showAllComputers"
            android:onClick="showAllComputers"
            android:longClickable="true"
            android:layout_gravity="center_horizontal"/>
    <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/computer_listView"
            android:choiceMode="singleChoice"
            />
</LinearLayout>